# shopping-agent-mcp

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
client/: main.py
config/: .env.example
docs/: API.md  SETUP.md
shopping_agent_mcp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
solutions/: issue-2-solution.md  issue-999-solution.md
src/: __init__.py  browser_demo.py  main.py
tests/: test_server.py
