[project]
name = "shopping-agent-mcp"
version = "1.0.0"
description = "MCP server for shopping agent"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "browser-use-sdk>=2.0.12",
    "mcp>=1.24.0",
    "python-dotenv",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]

[project.scripts]
main = "src.main:main"

